k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    service: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend:latest
          ports:
            - containerPort: 8000
      restartPolicy: Always
